# h2star

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/materials/: ax21.yaml
data/targets/: doe_targets.yaml
data/validation/: ax21_digitized.csv  hsecoe_reference.yaml  nist_h2_100K.csv  nist_h2_160K.csv  nist_h2_298K.csv  nist_h2_77K.csv  raw_nist_100K.txt  raw_nist_160K.txt  raw_nist_298K.txt  raw_nist_77K.txt
docs/: ai_usage_log.md  assumptions.md  model_derivations.md  progress_journal.md  references.md  validation_plan.md
notebooks/: 01_eos_validation.ipynb  02_isotherm_fit_ax21.ipynb
src/h2star/: __init__.py  constants.py  envelope.py  eos.py  fitting.py  heats.py  inverse.py  isotherm.py  sensitivity.py  system.py  tank.py  uq.py  vessel.py  viz.py
tests/: test_eos.py  test_fitting.py  test_heats.py  test_isotherm.py  test_smoke.py
