[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h2star"
version = "0.1.0"
description = "Hydrogen storage thermodynamics and system modeling toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml",
    "CoolProp",
    "SALib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
